# socketcat

./: .gitignore  LICENSE  README.MD  cli.py  client.py  legacy_server.py  packet.py  pyproject.toml  rpc.py  rpc_client.py  rpc_server.py  server.py  socketcat.py  utils.py
docs/: doc.md
test/: test_normal.py  test_trustid_invalid.py
