[tool.poetry]
name = "socketcat"
version = "0.1.1"
description = "Client and service implementation of socket communication based on Python asyncio"
repository = "https://github.com/wxiwnd/socketcat"
authors = ["wxiwnd"]
license = "MIT"
readme = "README.MD"

[tool.poetry.scripts]
socketcat = 'cli:main'

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
